# JiPP2

./: CMakeLists.txt  README.md
MainProject/: CMakeLists.txt  database.csv  database.txt
MainProject/include/: account.h  currency.h  menu.h  normal.h  savings.h  user.h
MainProject/src/: account.cpp  currency.cpp  main.cpp  menu.cpp  normal.cpp  savings.cpp  user.cpp
allocation_basics/: main.cpp
firstLib/include/: lib.h
firstLib/src/: lib.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrix.h
matrixLib/src/: matrix_lib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
structures/src/: main.cpp
